--- a/practiceEvelina-main/practiceEvelina-main 2/style.css
+++ b/practiceEvelina-main/practiceEvelina-main 2/style.css
@@ -4,9 +4,11 @@ h1{
 	color:#000637;
 	font-size:66px;
 	text-align:center;
-	font-family: 'Staatliches', cursive;
+	font-family: 'Prata', serif;
+	
 }
 p, li{
 	font-family: 'Josefin Sans', sans-serif;
 	font-size:15px;
 }
+
